--- a/src/Styles/Card.css
+++ b/src/Styles/Card.css
@@ -1,11 +1,11 @@
-#CardContainer {
+#CardContainer, #AddPostContainer{
     border: 0px solid #d3d3d3;
     border-radius: .5em;
     margin-bottom: 1em;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 50px;
-    padding: 1em;
+    margin-top: 8px;
+    padding: 0em;
     text-align: left;
     width: 490px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -39,10 +39,26 @@
         margin-left: 23px;
     }
 
-    #card-text {
+    #body {
         border: 5px;
         padding: 2px;
         margin-left: 15px;
         margin-right: 15px;
+        margin-bottom: 12px;
+    }
+
+    #timestamp{
+        border: 5px;
+        margin-top: 9px;
+        margin-bottom: 12px;
+        margin-left: 15px;
+        margin-right: 15px;
+        padding: 2px;
+
+    }
+    #post-button {
+        background-color:darkorchid;
+        margin-top: 6px;
         margin-bottom: 2px;
+
     }
