--- a/src/Styles/Splash.css
+++ b/src/Styles/Splash.css
@@ -3,40 +3,15 @@
     color: black;
 }
 
-#img-div{
-    background-image: url(/src/Assests/puzzle.jpg);
-    background-repeat: no-repeat;
-    height: 750px;
-    border-radius: 8px;
-    max-width: 80%;
-    max-height: 80%;
-    margin: 300px;
-    margin-top: 100px;
-    margin-bottom: 0px;
-    align-content: center;
-
-}
 .splash-component{
-    border: 2px solid #d3d3d3;
-    opacity: 1.0;
-    background-color: plum;
-    border-radius: .5em;
-    margin-bottom: 1em;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 100px;
-    padding: 1em;
-    text-align: left;
-    width: 1200px;
-    max-width: 60%;
-    opacity: 1.0;
-     
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 #splash-div{
-    background-color: darkviolet;
-    
-    margin-top: 100px;
+    background-color:#212529;
 }
 
 #signup-button{
@@ -44,7 +19,8 @@
     background-color: rgb(40, 1, 68);
 }
 #parent-div{
-    align-content: center;
+    position: relative;
+    height: 90vh;
 }
 
 #signin-button{
@@ -53,5 +29,37 @@
 
 #inner-div{
     background-color: white;
+}
+
+#splash-header {
+    color: antiquewhite;
+    font-size: 35px;
+    overflow: hidden;
+    border-right: .15em solid orange;
+    white-space: nowrap;
+    margin: 0 auto;
+    letter-spacing: .15em;
+    animation:
+        typing 5s steps(40, end),
+        blink-caret .75s step-end infinite;
+}
+
+@keyframes typing {
+    from {
+        width: 0
+    }
+    to {
+        width: 100%
+    }
+}
+
+@keyframes blink-caret {
+    from,
+    to {
+        border-color: transparent
+    }
+    50% {
+        border-color: orange;
+    }
 }
 
