--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-image: url('../illuminati_wallpaper.jpg');
+  background-image: url('../triangles.jpg');
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -12,3 +12,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+/* body{
+  background: black;
+} */
+
+/* canvas {
+  display: block;
+} */
