--- a/src/Styles/Card.css
+++ b/src/Styles/Card.css
@@ -56,9 +56,13 @@
         padding: 2px;
 
     }
+
     #post-button {
         background-color:darkorchid;
         margin-top: 6px;
         margin-bottom: 2px;
+    }
 
+    .card-body{
+        background-color: #212529;
     }
