--- a/src/Styles/Splash.css
+++ b/src/Styles/Splash.css
@@ -1,6 +1,9 @@
 
 #splash-header{
     color: black;
+    padding: 15px;
+    border-radius: 10px;
+    border: 5px solid plum;
 }
 
 .splash-component{
@@ -57,7 +60,7 @@
 @keyframes blink-caret {
     from,
     to {
-        border-color: antiquewhite
+        border-color: plum
     }
     50% {
         border-color: darkmagenta;
