--- a/src/Styles/Settings.css
+++ b/src/Styles/Settings.css
@@ -13,7 +13,9 @@
     
   }
 
-
+#update-form-top-label{
+    text-decoration: underline;
+}
 
 #update-settings-form {
     background-color: whitesmoke;
