small changes and merging

--- a/src/Styles/NavBar.css
+++ b/src/Styles/NavBar.css
@@ -27,4 +27,11 @@ a.dropdown-item:hover{
     margin-right: 60px;
 }
 
+.navLogo{
+    width: 35px;
+    height: 35px;
+    margin-bottom: 12px;
+    margin-right: 6px;
+}
+
 
