--- a/src/Styles/Card.css
+++ b/src/Styles/Card.css
@@ -85,4 +85,9 @@
         margin-bottom: 0px;
     }
 
+    settingDiv{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
     
