--- a/src/Styles/Card.css
+++ b/src/Styles/Card.css
@@ -69,7 +69,6 @@
     div#AddPostContainer.card{
         min-width: 300px;
         width:20vw;
-        height:15vh;
         background-color: #212529;
     }
 
@@ -94,3 +93,14 @@
     #CardContainer{
         flex-direction: column;
     }
+
+    .handleAndButton{
+        display: block;
+    }
+
+    .deleteButton{
+        position: absolute;
+        top: 10px;
+        right: 10px;
+    }
+
